syntax = "proto3";

option go_package = "pb";

import "entity_article.proto";
import "entity_admin_user.proto";

package api;

service AdminUserService {
    rpc GetMe (entity.AdminUserID) returns (entity.AdminUser) {};
    // rpc GetAll (common.Empty) returns (entity.AdminUserList);
    rpc Create (entity.CreateAdminUserRequest) returns (entity.AdminUser);
    rpc Update (entity.UpdateAdminUserRequest) returns (entity.AdminUser);
    rpc Delete (entity.AdminUserID) returns (entity.Empty);
}